# openapi_client/api/openapi.yaml
@@ -73,6 +73,8 @@ components:
         error:
           description: エラーメッセージ
           type: string
+      required:
+      - error
       type: object
     GetRatesResponse:
       example:
@@ -99,6 +101,9 @@ components:
           items:
             $ref: '#/components/schemas/Rate'
           type: array
+      required:
+      - period
+      - rates
       type: object
     Pair:
       description: 通貨ペア
@@ -156,5 +161,13 @@ components:
           description: 期間の終了日時
           format: date-time
           type: string
+      required:
+      - begin_date
+      - closing
+      - end_date
+      - high
+      - low
+      - opening
+      - volume
       type: object
 
